added a new line

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
       <img src="assets/img/esri-logo.gif"/>
       <h1>Would you look at that?</h1>
-      <h1>Esri is on Github, more coming soon</h1>
+      <h1>Esri is on Github</h1>
+      <h1>more coming soon</h1>
 
     </div> <!-- /container -->
 
