just look at it

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <div class="container">
 
       <img src="assets/img/esri-logo.gif"/>
-      <h1>Would you look at that?</h1>
-      <h1>Esri is on Github</h1>
-      <h1>more coming soon</h1>
+      <div class="hero-unit">
+        <h1>Would you look at that?</h1>
+        <p>Esri is on Github</p>
+      </div>
 
     </div> <!-- /container -->
 
