--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="assets/img/esri-logo.gif"/>
       <div class="hero-unit">
         <h1>Would you look at that?</h1>
-        <p>Esri is on Github</p>
+        <p>Esri is on Github!</p>
       </div>
 
     </div> <!-- /container -->
