Add link to esri main org page on github

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="assets/img/esri-logo.gif"/>
       <div class="hero-unit">
         <h1>Would you look at that?</h1>
-        <p>Esri is on Github!</p>
+        <p><a href="https://github.com/Esri">Esri is on Github!</a></p>
       </div>
 
     </div> <!-- /container -->
