--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <img src="assets/img/esri-logo.gif"/>
       <div class="hero-unit">
-        <h1>Would you look at that?</h1>
+        <h1>Just look at it!</h1>
         <p><a href="https://github.com/Esri">Esri is on Github!</a></p>
       </div>
 
