--- a/index.html
+++ b/index.html
@@ -13,8 +13,36 @@
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
+      .repo {
+        background-color: #fff;
+        opacity:.65;
+      }
+      .repo-inner {
+        margin:10px;
+      }
+      .map {
+        position:absolute;
+        width:100%;
+        height:100%;
+        top:0px;
+        z-index:-1;
+      }
     </style>
     <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=2.8compact"></script>
+
+    <script type="text/javascript">
+      dojo.require("esri.map");
+      dojo.addOnLoad(init);
+
+      function init() {
+        var initExtent = new esri.geometry.Extent({"xmin":-8592665.38, "ymin": 4694796.86, "xmax": -8558268.72, "ymax": 4717727.97, "spatialReference":{"wkid":102100}});
+        map = new esri.Map("map",{extent:initExtent});
+        var basemap = new esri.layers.ArcGISTiledMapServiceLayer("http://services.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer");
+        map.addLayer(basemap);
+      }
+
+    </script>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -25,12 +53,32 @@
 
   <body>
 
-    <div class="container">
+    <div id="map" class="map"></div>
+    <div class="container" >
 
-      <img src="assets/img/esri-logo.gif"/>
-      <div class="hero-unit">
-        <h1>Would you look at that?</h1>
-        <p>Esri is on Github</p>
+      <!--img src="assets/img/esri-logo.gif"/-->
+      <div class="hero-unit" style="background-color:#fff; opacity:.65;">
+        <h1>Esri is now on Github!</h1>
+        <p>We're excited to be bringing more to Github, and starting to collaborate around some of our ideas and projects. Stay tuned as we grow our code! </p>
+        <p>
+          <a href="http://github.com/esri" class="btn btn-primary btn-large">
+            See the code
+          </a>
+        </p>
+      </div>
+      <div class="row">
+        <div class="span6 repo">
+          <div class="repo-inner">
+            <a href="http://github.com/esri"><h1>Esri</h1></a>
+            <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div> 
+          </div>
+        </div>
+        <div class="span6 repo">
+          <div class="repo-inner">
+            <a href="http://github.com/arcgis"><h1>ArcGIS</h1></a>
+            <div>This account houses code for various projects related to the ArcGIS Platform. 
+            Application Templates, viewers, and extensions to ArcGIS all live here.</div>
+          </div>
       </div>
 
     </div> <!-- /container -->
@@ -38,7 +86,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/boostrap/js/bootstrap.min.js"></script>
+    <!--script src="../assets/boostrap/js/bootstrap.min.js"></script-->
 
   </body>
 </html>
