--- a/index.html
+++ b/index.html
@@ -72,15 +72,25 @@
       <div class="row">
         <div class="span6 repo">
           <div class="repo-inner">
-            <a href="http://github.com/esri"><h1>Esri</h1></a>
-            <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div> 
+            <a href="https://github.com/search?q=username%3Aesri+Template"><h1>ArcGIS Templates</h1></a>
+            <div>Here lines a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
           </div>
         </div>
         <div class="span6 repo">
           <div class="repo-inner">
-            <a href="http://github.com/arcgis"><h1>ArcGIS</h1></a>
-            <div>This account houses code for various projects related to the ArcGIS Platform. 
-            Application Templates, viewers, and extensions to ArcGIS all live here.</div>
+            <a href="https://github.com/search?q=username%3Aesri+Solution"><h1>ArcGIS Solutions</h1></a>
+            <div>This account houses code for the various project related to the ArcGIS Platform Application Templates, viewers, and extensions to ArcGIS.</div>
+          </div>
+        <div class="span6 repo">
+          <div class="repo-inner">
+            <a href="https://github.com/search?q=username%3Aesri+Framework"><h1>Apps/Frameworks</h1></a>
+            <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
+          </div>
+        </div>
+        <div class="span6 repo">
+          <div class="repo-inner">
+            <a href="https://github.com/search?q=username%3Aesri+Utility"><h1>Utilities</h1></a>
+            <div>This account houses code for various projects related to the ArcGIS Platform. Application Templates, viewers, and extensions to ArcGIS.</div>
           </div>
       </div>
 
