fixed the layout of the div elements, looks good

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       }
       #map_zoom_slider {
         display:none;
+      } 
+      .el {
+        height:130px;
+        margin-bottom: 10px;
       }
     </style>
     <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
@@ -70,28 +74,32 @@
         </p>
       </div>
       <div class="row">
-        <div class="span6 repo">
+        <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesri+Template"><h1>ArcGIS Templates</h1></a>
             <div>Here lines a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
           </div>
         </div>
-        <div class="span6 repo">
+        <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesri+Solution"><h1>ArcGIS Solutions</h1></a>
             <div>This account houses code for the various project related to the ArcGIS Platform Application Templates, viewers, and extensions to ArcGIS.</div>
           </div>
-        <div class="span6 repo">
+        </div>
+      </div>
+      <div class="row">
+        <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesri+Framework"><h1>Apps/Frameworks</h1></a>
             <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
           </div>
         </div>
-        <div class="span6 repo">
+        <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesri+Utility"><h1>Utilities</h1></a>
             <div>This account houses code for various projects related to the ArcGIS Platform. Application Templates, viewers, and extensions to ArcGIS.</div>
           </div>
+        </div>
       </div>
 
     </div> <!-- /container -->
