--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+app"><h1>Apps/Frameworks</h1></a>
+            <a href="https://github.com/search?q=username%3Aesri+app+OR+sample"><h1>Apps and Samples</h1></a>
             <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
           </div>
         </div>
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri"><h1>Utilities</h1></a>
+            <a href="https://github.com/search?q=username%3Aesri"><h1>Utilities and Frameworks</h1></a>
             <div>This account houses code for various projects related to the ArcGIS Platform. Application Templates, viewers, and extensions to ArcGIS.</div>
           </div>
         </div>
