Added local govt

--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aarcgis+Template"><h1>ArcGIS Templates</h1></a>
-            <div>Here lines a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
+            <a href="https://github.com/search?q=username%3Aesri+app+OR+sample"><h1>Apps and Samples</h1></a>
+            <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
           </div>
-        </div>
+        </div> 
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aarcgis+Solution"><h1>ArcGIS Solutions</h1></a>
-            <div>This account houses code for the various project related to the ArcGIS Platform Application Templates, viewers, and extensions to ArcGIS.</div>
+            <a href="https://github.com/search?q=username%3Aesri"><h1>Frameworks and Utilities</h1></a>
+            <div>This account houses code for various projects related to the ArcGIS Platform. Application Templates, viewers, and extensions to ArcGIS.</div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+app+OR+sample"><h1>Apps and Samples</h1></a>
-            <div>Here lives a general collection of open source code from Esri. Innovative and experimental apps and models use this space as a centralized development platform.</div>
+            <a href="https://github.com/search?q=username%3Aarcgis+Solution"><h1>ArcGIS Solutions</h1></a>
+            <div>This account houses code for the various project related to the ArcGIS Platform Application Templates, viewers, and extensions to ArcGIS.</div>
           </div>
         </div>
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri"><h1>Utilities and Frameworks</h1></a>
-            <div>This account houses code for various projects related to the ArcGIS Platform. Application Templates, viewers, and extensions to ArcGIS.</div>
+            <a href="https://github.com/search?q=username%3Aesri+arcgislocalgov"><h1>ArcGIS for Local Government</h1></a>
+            <div>ArcGIS for Local Government provides maps and apps that help you implement GIS in your local government.</div>
           </div>
         </div>
       </div>
