Update local govt description

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesri+arcgislocalgov"><h1>ArcGIS for Local Government</h1></a>
-            <div>ArcGIS for Local Government provides maps and apps that help you implement GIS in your local government.</div>
+            <div>Focused maps and apps that help you implement ArcGIS in your local government.</div>
           </div>
         </div>
       </div>
