--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+arcgislocalgov"><h1>ArcGIS for Local Government</h1></a>
+            <a href="https://github.com/search?q=username%3Aesri+local+government"><h1>ArcGIS for Local Government</h1></a>
             <div>Focused maps and apps that help you implement ArcGIS in your local government.</div>
           </div>
         </div>
