--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div> 
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri"><h1>Frameworks and Utilities</h1></a>
+            <a href="https://github.com/search?q=username%3Aesri+framework+OR+utility"><h1>Frameworks and Utilities</h1></a>
             <div>Here you will find code for utility projects and extensions of the ArcGIS Platform.</div>
           </div>
         </div>
@@ -94,13 +94,13 @@
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aarcgis+Solution"><h1>Application Templates</h1></a>
+            <a href="https://github.com/search?q=username%3Aesr+template"><h1>Application Templates</h1></a>
             <div>Here you will find various mapping and other template projects for the ArcGIS platform.</div>
           </div>
         </div>
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+local+government"><h1>ArcGIS for Local Government</h1></a>
+            <a href="https://github.com/search?q=username%3Aesri+government+OR+public"><h1>ArcGIS for Local Government</h1></a>
             <div>Focused maps and apps that help you implement ArcGIS in your local government.</div>
           </div>
         </div>
