--- a/index.html
+++ b/index.html
@@ -80,27 +80,27 @@
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+app+OR+sample"><h1>Apps and Samples</h1></a>
-            <div>Here lives a general collection of open source ArcGIS apps and samples from Esri.</div>
+            <a href="https://github.com/search?q=username%3Aesri+app+OR+sample"><h2>Apps and Samples</h2></a>
+            <div>General collection of ArcGIS mapping apps and samples.</div>
           </div>
         </div> 
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+framework+OR+utility"><h1>Frameworks and Utilities</h1></a>
-            <div>Here you will find code for utility projects and extensions of the ArcGIS Platform.</div>
+            <a href="https://github.com/search?q=username%3Aesri+framework+OR+utility"><h2>Frameworks and Utilities</h2></a>
+            <div>Utility projects, frameworks and extensions of the ArcGIS Platform.</div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesr+template"><h1>Application Templates</h1></a>
-            <div>Here you will find various mapping and other template projects for the ArcGIS platform.</div>
+            <a href="https://github.com/search?q=username%3Aesr+template"><h2>Application Templates</h2></a>
+            <div>Various mapping and application template projects for the ArcGIS platform.</div>
           </div>
         </div>
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+government+OR+public"><h1>ArcGIS for Local Government</h1></a>
+            <a href="https://github.com/search?q=username%3Aesri+government+OR+public"><h2>ArcGIS for Local Government</h2></a>
             <div>Focused maps and apps that help you implement ArcGIS in your local government.</div>
           </div>
         </div>
