--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesri+framework+OR+utility"><h2>Frameworks and Utilities</h2></a>
-            <div>Utility projects, frameworks and extensions of the ArcGIS Platform.</div>
+            <div>Utility projects, frameworks and extensions for the ArcGIS platform.</div>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
         <div class="span6 repo el">
           <div class="repo-inner">
             <a href="https://github.com/search?q=username%3Aesr+template"><h2>Application Templates</h2></a>
-            <div>Various mapping and application template projects for the ArcGIS platform.</div>
+            <div>Mapping and application templates for the ArcGIS platform.</div>
           </div>
         </div>
         <div class="span6 repo el">
