--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesr+template"><h2>Application Templates</h2></a>
+            <a href="https://github.com/search?q=username%3Aesri+template"><h2>Application Templates</h2></a>
             <div>Mapping and application templates for the ArcGIS platform.</div>
           </div>
         </div>
