--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="span6 repo el">
           <div class="repo-inner">
-            <a href="https://github.com/search?q=username%3Aesri+government+OR+public"><h2>ArcGIS for Local Government</h2></a>
+            <a href="https://github.com/search?q=username%3Aesri+local+government"><h2>ArcGIS for Local Government</h2></a>
             <div>Focused maps and apps that help you implement ArcGIS in your local government.</div>
           </div>
         </div>
