Fixed image src ref

--- a/help/esri-getting-to-know-github.html
+++ b/help/esri-getting-to-know-github.html
@@ -68,7 +68,7 @@ div.container a.brand {
 			<br />
 			<p>
 				To help jump start working with Esri code on GitHub, we’ve put
-				together this short question and answer page introducing Github
+				together this short question and answer page introducing GitHub
 				concepts. We recommend reviewing GitHub’s offical help documentation
 				to <a href="https://help.github.com">learn more</a>.
 			</p>
@@ -81,7 +81,7 @@ div.container a.brand {
 				options for how your download gets packaged; for example, Zip, GZip.
 			</p>
 			<b>Figure 1: Download Esri Code</b> <img alt="help-download-code"
-				src="../assets/img/help-download-code"> <br /> <br />
+				src="../assets/img/help-download-code.png"> <br /> <br />
 			<h2>What is a repository?</h2>
 			<p>A repository is a container where Esri stores files in a
 				logical grouping. Esri may bundle a single project / application
@@ -94,14 +94,14 @@ div.container a.brand {
 				3: Inside Esri repositories</b> <img alt="help-esri-repos"
 				src="../assets/img/help-inside-repo.png"> <br /> <br />
 			<h2>Should I clone a repository?</h2>
-			<p>Yes, if you want the power of Github behind you.  Cloning is another way to obtain Esri source code. To clone a
+			<p>Yes, if you want the power of GitHub behind you.  Cloning is another way to obtain Esri source code. To clone a
 				repository on GitHub’s website you must have Git software installed
 				on your computer. This is because cloning a repository physically
 				creates a copy of a repository, storing it in a way such that it can
 				be updated and modified using Git tools. From the GitHub website,
 				you can download <a href="http://mac.github.com">Github for Mac</a>, <a href="http://windows.github.com">Github for Windows</a> and a variety of
 				Git options on <a href="http://git-scm.com/downloads/guis">Linux operating systems</a>. Cloning repositories enables
-				you to have one copy of your code locally and one copy in the Github
+				you to have one copy of your code locally and one copy in the GitHub
 				cloud. It also allows you to sync between the two spaces, track
 				changes and restore code back to a particular day and time.</p>
 			<b>Figure 4: Clone a repository</b> <img alt="help-clone-repo"
