Fix GitHub spelling

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
       <!--img src="assets/img/esri-logo.gif"/-->
       <div class="hero-unit" style="background-color:#fff; opacity:.65;">
-        <h1>Esri is now on Github!</h1>
-        <p>We're excited to be bringing more to Github, and starting to collaborate around some of our ideas and projects. Stay tuned as we grow our code! </p>
+        <h1>Esri is now on GitHub!</h1>
+        <p>We're excited to be bringing more to GitHub, and starting to collaborate around some of our ideas and projects. Stay tuned as we grow our code! </p>
         <p>
           <a href="http://github.com/esri" class="btn btn-primary btn-large">
             See the code
