--- a/index_annimated.html
+++ b/index_annimated.html
@@ -12,23 +12,23 @@
 
       <meta name='description' content='We are excited about bringing the idea of social coding to Esri. Browse and search flexible applications, frameworks, and extensions built with our powerful developer platform.'>
 
-    <!--link rel="shortcut icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" href="/img/favicon.ico">
     <link href="http://fast.fonts.com/cssapi/23855eec-5fdf-4594-9898-0113a04bfef0.css" rel="stylesheet" type="text/css">
     <link href="/css/screen.css?1367966464" media="screen" rel="stylesheet" type="text/css" />
     <link href="/css/home.css?1365465350" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
     <script src="/js/libs/jquery.isotope.min.js?1361723183" type="text/javascript"></script>
     <script src="/js/libs/chosen.jquery.js?1361723183" type="text/javascript"></script>
-    <script src="/js/github.js?1361723183" type="text/javascript"></script-->
+    <script src="/js/github.js?1361723183" type="text/javascript"></script>
     
-    <link rel="shortcut icon" href="/GitHub/esri.github.com/img/favicon.ico">
+    <!--link rel="shortcut icon" href="/GitHub/esri.github.com/img/favicon.ico">
     <link href="http://fast.fonts.com/cssapi/23855eec-5fdf-4594-9898-0113a04bfef0.css" rel="stylesheet" type="text/css">
     <link href="/GitHub/esri.github.com/css/screen.css?1367966464" media="screen" rel="stylesheet" type="text/css" />
     <link href="/GitHub/esri.github.com/css/home.css?1365465350" media="screen" rel="stylesheet" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
     <script src="/GitHub/esri.github.com/js/libs/jquery.isotope.min.js?1361723183" type="text/javascript"></script>
     <script src="/GitHub/esri.github.com/js/libs/chosen.jquery.js?1361723183" type="text/javascript"></script>
-    <script src="/GitHub/esri.github.com/js/github.js?1361723183" type="text/javascript"></script>
+    <script src="/GitHub/esri.github.com/js/github.js?1361723183" type="text/javascript"></script-->
     <script>
 
         $(function(){
