Added more keywords

--- a/index_annimated.html
+++ b/index_annimated.html
@@ -36,8 +36,8 @@
             var s = 3000;
             var i = 0;
             var array = ["JavaScript","ActionScript","Objective-C","Java","Python","DotNet","iOS","C-Sharp","Android",
-                            "QuickStart","Local-Government","Bootstrap", "GeoJSON", "Mobile","Code-Challenge","Storytelling","Geocoding",
-                            "Hadoop","Web", "Analysis","Offline","Public",""];
+                            "QuickStart","Local-Government","Bootstrap", "Mapping","GeoJSON", "Mobile","Code-Challenge","Utility", "Storytelling","Geocoding",
+                            "ArcGIS", "Hadoop","Web", "Social","Analysis","Offline","Runtime","Dashboard", "Public",""];
             var timer;  
 
             function start(cycle) {  
