--- a/index.html
+++ b/index.html
@@ -2515,7 +2515,7 @@
           <h3 class="repo-language JavaScript"> JavaScript </h3>
         </div>
         <p class="repo-description">
-          Source code for ArcGIS Workflow Manager JavaScrpt viewer - Manage your workflows on the web.
+          Source code for ArcGIS Workflow Manager JavaScript viewer - Manage your workflows on the web.
         </p>
         <p class="stats"> <span class="icon-fork"> </span> 18 <span class="icon-star"> 14 </span> 
       </div>
