hide deprecated projects and trap rate limit errors

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: Esri GitHub | Open Source and Example Projects from the Esri Developer Platform
-description: We are excited about bringing the idea of social coding to Esri. Browse and search flexible applications, frameworks, and extensions built with our powerful developer platform.
+description: We are excited to bring the idea of social coding to Esri. Browse and search flexible applications, frameworks, and extensions built with our powerful developer platform.
 css:
   - home
 ---
@@ -15,7 +15,7 @@ css:
       </div>
       <h1 id="about" class="trailer-half">Esri Open Source</h1>
       <p class="font-size-1">
-        Esri believes that spatial thinking can address the world's most difficult problems and enable communities to work together. Central to our mission is the development of advanced technology that enables you to be innovative by providing a stable data management and analysis platform that is built and extended through open-source code.
+        At Esri we believe that spatial thinking can address the world's most difficult problems and enable communities to work together. Central to our mission is the development of advanced technology that enables you to be innovative by providing a stable data management and analysis platform that is built and extended through open&#8209;source code.
       </p>
       <p class="font-size-1">
         These projects cover the entire ArcGIS platform, from user applications to data analysis and visualization. Learn more about our many open-source products and tools that you are free to use, modify, contribute to. We look forward to working together.
