store encoded language in project yaml

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ css:
       <div class="text-center">
         <span class="esri-logo-reverse logo-large"></span>
       </div>
-      <h1 id="about" class="trailer-half">Esri <a href="http://www.esri.com/software/open/open-source">Open Source</a></h1>
+      <h1 id="about" class="trailer-half">Esri <a class="link-white" href="http://www.esri.com/software/open/open-source">Open Source</a></h1>
       <p class="font-size-1">
         At Esri we believe that spatial thinking can address the world's most difficult problems and enable communities to work together. Central to our mission is the development of advanced technology that enables you to be innovative by providing a stable data management and analysis platform that is built and extended through open&#8209;source code.
       </p>
