--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@ css:
 
 <div class="panel panel-white panel-border-bottom">
   <div class="column-16 pre-4 post-4">
-    <div class="block-group block-group-4-up phone-block-group-1-up text-center">
+    <div class="block-group block-group-4-up phone-block-group-1-up tablet-block-group-2-up text-center">
       <div class="block phone-trailer-1">
         <h5 class="trailer-0"><a href="#webdevelopment" class="btn btn-large btn-white">Web Development</a></h5>
       </div>
@@ -27,7 +27,7 @@ css:
         <h5 class="trailer-0"><a href="#datamanagement" class="btn btn-large btn-white">Data Management</a></h5>
       </div>
       <div class="block phone-trailer-1">
-        <h5 class="trailer-0"><a href="#spatialanalysis" class="btn btn-large btn-white">Spatial Analyses</a></h5>
+        <h5 class="trailer-0"><a href="#spatialanalysis" class="btn btn-large btn-white">Spatial Analysis</a></h5>
       </div>
       <div class="block phone-trailer-1">
         <h5 class="trailer-0"><a href="#publishingsharing" class="btn btn-large btn-white">Publishing and Sharing</a></h5>
