we need to load our JS for redirects to work

--- a/src/index.html
+++ b/src/index.html
@@ -44,3 +44,5 @@ css:
     </div>
   </div>
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+<script src="/assets/js/github.js" type="text/javascript"></script>
