--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,16 @@ css:
   <div class="column-16 pre-4 post-4">
     <div class="block-group block-group-4-up phone-block-group-1-up tablet-block-group-2-up text-center">
       <div class="block phone-trailer-1">
-        <h5 class="trailer-0"><a href="#webdevelopment" class="btn btn-large btn-white">Web Development</a></h5>
+        <h5 class="trailer-0"><a href="#web-development" class="btn btn-large btn-white">Web Development</a></h5>
       </div>
       <div class="block phone-trailer-1">
-        <h5 class="trailer-0"><a href="#datamanagement" class="btn btn-large btn-white">Data Management</a></h5>
+        <h5 class="trailer-0"><a href="#data-management" class="btn btn-large btn-white">Data Management</a></h5>
       </div>
       <div class="block phone-trailer-1">
-        <h5 class="trailer-0"><a href="#spatialanalysis" class="btn btn-large btn-white">Spatial Analysis</a></h5>
+        <h5 class="trailer-0"><a href="#spatial-analysis" class="btn btn-large btn-white">Spatial Analysis</a></h5>
       </div>
       <div class="block phone-trailer-1">
-        <h5 class="trailer-0"><a href="#publishingsharing" class="btn btn-large btn-white">Publishing and Sharing</a></h5>
+        <h5 class="trailer-0"><a href="#publishing-sharing" class="btn btn-large btn-white">Publishing and Sharing</a></h5>
       </div>
     </div>
   </div>
