alphabetize tags, simplify search
whoops

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@ css:
   - home
 ---
 {% from "layouts/_macros.html" import projectsSection %}
-{% from "layouts/_macros.html" import languageOptions %}
 {% from "layouts/_macros.html" import topicOptions %}
 
 <div class="panel open-banner panel-black panel-no-border padding-leader-1 padding-trailer-2">
@@ -26,10 +25,7 @@ css:
       </div>
       <div class="search-select">
         <select data-placeholder="Search/Select" class="chzn-select" multiple tabindex="6">
-          <!--optgroup label="Language">
-          {{ languageOptions(data.searchTags.languages) }}
-          </optgroup-->
-          <optgroup label="Topics">
+          <optgroup>
           {{ topicOptions(data.searchTags.topics) }}
           </optgroup>
         </select>
@@ -70,6 +66,4 @@ css:
     </div>
   </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-<script src="/assets/js/libs/chosen.jquery.js" type="text/javascript"></script>
-<script src="/assets/js/github.js" type="text/javascript"></script>
+
