no need to use yaml for static text

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ css:
       <div class="column-10 pre-1 padding-leader-1 padding-trailer-0">
         <h1 class="font-size-6 text-white trailer-0">Esri Open Source</h1>
         <p class="leader-0 font-size--1 avenir-light text-rule">Thinking spatially, solving problems, together.</p>
-        <p class="leader-2 font-size-1">Explore over 400 geosptial projects</p>
+        <p class="leader-2 font-size-1">Explore over 400 geospatial projects</p>
       </div>
   </div>
 </div>
