--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@ css:
   </div>
 </div>
 
-<div class="panel panel-blue panel-no-border padding-leader-1 padding-trailer-1">
+<div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
     <div class="column-18">
     <select data-placeholder="Search by topic..." class="chzn-select" multiple tabindex="1">
@@ -31,7 +31,7 @@ css:
     <div class="column-1" id="numReposFound">
     </div>
     <div class="column-5">
-      <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-clear-white btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
+      <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
     </div>
   </div>
 </div>
