--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,26 @@ css:
 {% from "layouts/_macros.html" import projectsSection %}
 {% from "layouts/_macros.html" import topicOptions %}
 
-<div class="panel open-banner panel-black panel-no-border padding-leader-1 padding-trailer-2">
+
+<div class="panel open-banner panel-black panel-no-border padding-leader-0 padding-trailer-2">
+  <!--div class="grid-container">
+    <div class="column-11 padding-leader-0 padding-trailer-0">
+      <p class="leader-half font-size--2 avenir-light inline-block">Thinking spatially, solving problems, together.</p>
+    </div>
+  </div-->
+
   <div class="grid-container">
-      <div class="column-10 pre-1 padding-leader-1 padding-trailer-0">
-        <h1 class="font-size-6 text-white trailer-0">Esri Open Source</h1>
-        <p class="leader-0 font-size--1 avenir-light text-rule">Thinking spatially, solving problems, together.</p>
-        <p class="leader-2 font-size-1">Explore over 400 geospatial projects</p>
-      </div>
+    <div class="column-12 pre-1 padding-leader-1 padding-trailer-0">
+      <h1 class="font-size-6 leader-1 text-white trailer-0">Esri Open Source</h1>
+      <p class="leader-half font-size-1 avenir-light inline-block">Thinking spatially, solving problems, together.</p>
+      <p class="leader-1 font-size--3">Explore over 400 geospatial projects</p>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
-    <div class="column-18">
+    <div class="column-18 tablet-column-11 phone-column-5">
     <select data-placeholder="Search by topic..." class="chzn-select" multiple tabindex="1">
       <optgroup>
         {{ topicOptions(data.searchTags.topics) }}
@@ -27,9 +34,10 @@ css:
     </select>
     </div>
     <div class="column-1" id="numReposFound">
+    &nbsp;
     </div>
     <div class="column-5">
-      <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
+      <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
     </div>
   </div>
 </div>
