readd redirect for old tags

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ css:
   <div class="grid-container">
     <div class="column-18 tablet-column-11 phone-column-5">
     <select data-placeholder="Search by topic..." class="chzn-select" multiple tabindex="1">
-      <optgroup>
+      <optgroup id='esri-topic-list'>
         {{ topicOptions(data.searchTags.topics) }}
       </optgroup>
     </select>
