encoded ellipsis and no spellcheck

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@ css:
 <div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
     <div class="column-18 tablet-column-11 phone-column-5 line-height-less">
-      <select data-placeholder="Search by topic..." class="chzn-select hidden" multiple tabindex="1">
+      <select data-placeholder="Search by topic&hellip;" class="chzn-select hidden" spellcheck="false" multiple tabindex="1">
         <optgroup id='esri-topic-list' label="Topics">
           <{{ topicOptions(data.searchTags.topics) }}>
         </optgroup>
