--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@ css:
 <div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
     <div class="column-18 tablet-column-11 phone-column-5 line-height-less">
-      <select data-placeholder="Search by topic&hellip;" class="chosen-select" spellcheck="false" multiple tabindex="1">
+      <select data-placeholder="Search by topic&hellip;" class="chosen-select" multiple tabindex="1">
         <optgroup id='esri-topic-list' label="Topics">
           <option value=""></option>
           {{ topicOptions(data.searchTags.topics) }}
