Placeholder for responsive

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@ css:
           {{ topicOptions(data.searchTags.topics) }}
         </optgroup>
       </select>
+      &nbsp;
     </div>
     <div class="column-1" id="numReposFound">&nbsp;</div>
     <div class="column-5">
