--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,22 @@ css:
 <div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
     <div class="column-18 tablet-column-11 phone-column-5 line-height-less">
-      <select data-placeholder="Search by topic&hellip;" class="chosen-select" multiple tabindex="1">
+      <select data-placeholder="Search by topic&hellip;" class="chosen-select hidden" multiple tabindex="1">
         <optgroup id='esri-topic-list' label="Topics">
           <option value=""></option>
           {{ topicOptions(data.searchTags.topics) }}
         </optgroup>
       </select>
-      &nbsp;
     </div>
-    <div class="column-1" id="numReposFound">&nbsp;</div>
+    <div class="column-1">
+      <div id="numReposFound" class="number-repos text-center"></div>
+      <div class="spinner-container text-center">
+        <div class="spinner hide">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" fill="#999" class="spin-svg"><path d="M27.518 8.338c.324.37.772.94 1.261 1.727a13.499 13.499 0 0 1 1.986 7.41c-.019 3.243-1.41 7.185-4.559 10.081-3.085 2.902-7.94 4.492-12.611 3.566-4.697-.832-8.864-4.161-10.853-8.38-2.043-4.23-1.863-9.035-.373-12.647 1.463-3.672 4.051-6.09 6.098-7.421C10.551 1.336 12.092.889 12.389.802c1.234-.356 2.457-.18 3.282.309.839.511 1.281 1.259 1.276 2.105-.079 1.717-1.406 3.039-2.86 3.478-.19.051-1.158.258-2.564.99a10.6 10.6 0 0 0-4.43 4.522c-1.216 2.318-1.698 5.672-.504 8.872 1.158 3.185 4.042 6.059 7.693 7.058 3.629 1.078 7.773.199 10.671-2.06 2.944-2.244 4.563-5.648 4.855-8.66.369-3.046-.465-5.615-1.261-7.222a13.163 13.163 0 0 0-1.084-1.812l-.45-.601.504.559z"/>
+          </svg>
+        </div>
+      </div>
+    </div>
     <div class="column-5">
       <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
     </div>
