Hide chosen on tablets and mobile

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@ css:
 
 <div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
-    <div class="column-18 tablet-column-12 phone-column-12 column-flex">
+    <div class="column-18 tablet-column-12 phone-column-12 column-flex tablet-hide">
       <select data-placeholder="Search by topic&hellip;" class="chosen-select hidden" multiple tabindex="1">
         <optgroup id='esri-topic-list' label="Topics">
           <option value=""></option>
