remove tags, center button, more topics
to appease morten

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@ css:
 
 <div class="panel panel-no-border padding-leader-1 padding-trailer-1">
   <div class="grid-container">
-    <div class="column-18 tablet-column-12 phone-column-12 column-flex tablet-hide">
+    <div class="column-18 column-flex tablet-hide">
       <select data-placeholder="Search by topic&hellip;" class="chosen-select hidden" multiple tabindex="1">
         <optgroup id='esri-topic-list' label="Topics">
           <option value=""></option>
@@ -37,10 +37,14 @@ css:
         </div>
       </div>
     </div>
-    <div class="column-6 tablet-column-12 phone-column-12">
+    <div class="column-6 tablet-hide">
       <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
     </div>
   </div>
+  <!-- same button as above, but outside the grid-container its easier to center-->
+  <div class="tablet-show">
+      <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
+    </div>
 </div>
 
 <div id="featured" class="panel panel-white panel-no-padding panel-no-border padding-leader-1 padding-trailer-2">
