remove duplicate div id

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ css:
   </div>
   <!-- same button as above, but outside the grid-container its easier to center-->
   <div class="tablet-show">
-      <a id="btnViewRepos" href="https://github.com/esri" class="btn btn-blue btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
+      <a href="https://github.com/esri" class="btn btn-blue btn-fill">View on GitHub <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" class="svg-icon"><path d="M7 4h5l12 12-12 12H7l12-12L7 4z"/></svg></a>
     </div>
 </div>
 
