format with prettier

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Esri open source projects</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -14,18 +13,19 @@
 
     <!-- YAML processor: -->
     <script src="https://unpkg.com/js-yaml@4/dist/js-yaml.js"></script>
-
-</head>
-<body translate="no">
+  </head>
+  <body translate="no">
     <header class="bg-[url('/assets/open-source-hero.jpg')]">
-        <div class="p-12 text-white">
-            <h1 class="text-4xl font-bold mb-8 leading-7">Esri Open Source</h1>
-            <h4 class="text-xl font-bold leading-7">Thinking spatially, solving problems, together.</h4>
-            <p>Explore over 600 open-source geospatial projects.</p>
-        </div>
+      <div class="max-w-8xl p-12 text-white">
+        <h1 class="text-4xl font-bold mb-8 leading-7">Esri Open Source</h1>
+        <h4 class="text-xl font-bold leading-7">Thinking spatially, solving problems, together.</h4>
+        <p>Explore over 600 open-source geospatial projects.</p>
+      </div>
     </header>
-    <main id="main" class="p-4"><!-- The JavaScript will place content here --></main>
+    <main id="main" class="p-4">
+      <!-- The JavaScript will place content here -->
+    </main>
     <footer></footer>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
