--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <script src="https://unpkg.com/js-yaml@4/dist/js-yaml.js"></script>
   </head>
   <body translate="no">
-    <header class="bg-[url('/assets/open-source-hero.jpg')]">
-      <div class="max-w-8xl p-12 text-white">
+    <header class="bg-center bg-no-repeat bg-[url('/assets/open-source-hero.jpg')] bg-cover">
+      <div class="mx-auto max-w-7xl py-14 text-white p-4">
         <h1 class="text-4xl font-bold mb-8 leading-7">Esri Open Source</h1>
         <h4 class="text-xl font-bold leading-7">Thinking spatially, solving problems, together.</h4>
         <p>Explore over 600 open-source geospatial projects.</p>
       </div>
     </header>
-    <main id="main" class="p-4">
+    <main id="main" class="pt-12 px-4 max-w-7xl mx-auto">
       <!-- The JavaScript will place content here -->
     </main>
     <footer></footer>
