--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Esri open source projects</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,7 +16,9 @@
     <script src="https://unpkg.com/js-yaml@4/dist/js-yaml.js"></script>
   </head>
   <body translate="no">
-    <header class="bg-center bg-no-repeat bg-[url('/assets/open-source-hero.jpg')] bg-cover">
+    <header
+      class="bg-center bg-no-repeat bg-[url('/assets/open-source-hero.jpg')] bg-cover grayscale md:grayscale-0 transition-all duration-1000"
+    >
       <div class="mx-auto max-w-7xl py-14 text-white p-4">
         <h1 class="text-4xl font-bold mb-8 leading-7">Esri Open Source</h1>
         <h4 class="text-xl font-bold leading-7">Thinking spatially, solving problems, together.</h4>
