--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       class="bg-center bg-no-repeat bg-[url('/assets/open-source-hero.jpg')] bg-cover grayscale md:grayscale-0 transition-all duration-1000"
     >
       <div class="mx-auto max-w-7xl py-14 text-white p-4">
-        <h1 class="text-4xl font-bold mb-8 leading-7">Esri Open Source</h1>
-        <h4 class="text-xl font-bold leading-7">Thinking spatially, solving problems, together.</h4>
+        <h1 class="text-4xl md:text-6xl mb-8 leading-7">Esri Open Source</h1>
+        <h4 class="text-xl leading-7">Thinking spatially, solving problems, together.</h4>
         <p>Explore over 600 open-source geospatial projects.</p>
       </div>
     </header>
