footer and cleanups

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     <main id="main" class="pt-12 px-4 max-w-7xl mx-auto">
       <!-- The JavaScript will place content here -->
     </main>
-    <footer></footer>
+    <footer class="bg-[#efefef] text-center">
+      <a href="https://esri.com" class="">
+        <img class="max-w-xs inline-block m-8" src="http://esri.github.io/assets/img/logo/esri-logo.svg" />
+      </a>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
